Dev-RBI/src/objects/Project_Cust_Packages__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <description>To get account Id from Customer Project.</description>
        <formula>Customer_Project__r.AccountId__c</formula>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalcfollowupVisitdt__c</fullName>
        <formula>IF(ISBLANK(LastFollowupDate__c), Service_Requested_Date__c , LastFollowupDate__c )</formula>
        <label>CalcfollowupVisitdt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Stores relationship of Customer project</description>
        <label>Customer Project</label>
        <referenceTo>Customer_Projects__c</referenceTo>
        <relationshipLabel>Customer Package</relationshipLabel>
        <relationshipName>Customer_Package</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Used to store discount</description>
        <label>Discount %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>This field will store the Expiry date for the service</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FTR_File_Path__c</fullName>
        <description>Used to store FTR link. The FTR report link will be populated after the Customer generates FTR for the first time.</description>
        <label>FTR File Path</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsContractInActive__c</fullName>
        <description>If Contract is over then it will display Y  else N.</description>
        <formula>IF(ISBLANK(End_Date__c), &apos;N&apos;, IF(End_Date__c  &lt; TODAY(), &apos;Y&apos;, &apos;N&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsContractInActive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOV_Name__c</fullName>
        <description>This field is used in Trigger.</description>
        <formula>List_of_Values__r.Name</formula>
        <label>LOV Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastFollowupDate__c</fullName>
        <description>This is used in FollowupBatch.</description>
        <label>LastFollowupDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>List_Pricing__c</fullName>
        <description>This field is used to store list price for the service.</description>
        <label>List Pricing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_of_Values__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Stores reference of master data for List of Values object</description>
        <label>Package Name</label>
        <referenceTo>List_of_Values__c</referenceTo>
        <relationshipLabel>Customer Package</relationshipLabel>
        <relationshipName>Customer_Package</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_City__c</fullName>
        <description>Used for reporting</description>
        <label>Project City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <description>This field is used in Trigger.</description>
        <formula>Customer_Project__r.Project_Id__c &amp; 
MID( 
&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;, 
MIN(FIND(MID(Customer_Project__r.Project_Id__c, 5, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 + 
MIN(FIND(MID(Customer_Project__r.Project_Id__c, 4, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 + 
MIN(FIND(MID(Customer_Project__r.Project_Id__c, 3, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 + 
MIN(FIND(MID(Customer_Project__r.Project_Id__c, 2, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 + 
MIN(FIND(MID(Customer_Project__r.Project_Id__c, 1, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1, 
1) &amp; 
MID( 
&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;, 
MIN(FIND(MID(Customer_Project__r.Project_Id__c, 10, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 + 
MIN(FIND(MID(Customer_Project__r.Project_Id__c, 9, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 + 
MIN(FIND(MID(Customer_Project__r.Project_Id__c, 8, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 + 
MIN(FIND(MID(Customer_Project__r.Project_Id__c, 7, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 + 
MIN(FIND(MID(Customer_Project__r.Project_Id__c, 6, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1, 
1) &amp; 
MID( 
&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;, 
MIN(FIND(MID(Customer_Project__r.Project_Id__c, 15, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 16 + 
MIN(FIND(MID(Customer_Project__r.Project_Id__c, 14, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 8 + 
MIN(FIND(MID(Customer_Project__r.Project_Id__c, 13, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 4 + 
MIN(FIND(MID(Customer_Project__r.Project_Id__c, 12, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 2 + 
MIN(FIND(MID(Customer_Project__r.Project_Id__c, 11, 1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;), 1) * 1 + 1, 
1)</formula>
        <label>Project Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Monitoring_Frequency__c</fullName>
        <formula>Customer_Project__r.AccountId__r.Project_Monitoring_Frequency__c</formula>
        <label>Project Monitoring Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Customer_Project__r.Project_Id__r.Name</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>Customer_Project__r.Project_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Requested_Date__c</fullName>
        <description>This is used to store the Date requested by the Customer for the service</description>
        <label>Service Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>This is used to store the Start date for the service</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Surveyor_Id__c</fullName>
        <description>This field is used in Trigger.</description>
        <formula>Customer_Project__r.Project_Id__r.Surveyor__c</formula>
        <label>Surveyor Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Leader__c</fullName>
        <formula>Customer_Project__r.Project_Id__r.Team_Leader__c</formula>
        <label>Team Leader</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Head__c</fullName>
        <formula>Customer_Project__r.Project_Id__r.Technical_Head__c</formula>
        <label>Technical Head</label>
        <type>Text</type>
    </fields>
    <label>Customer Package</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Package Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Package</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>